# ribbon-filter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  performance_regression.md
.github/workflows/: benchmark.yml  ci.yml
benches/: benchmarks.md  bloomfilter.rs  bloomz.rs  clubcard.rs  common.rs  fastbloom.rs  main.rs  ribbon.rs  ribbon_filter.rs  ribbonfilter.rs
docs/: maintenance.md  platforms.md  release-process.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/build_query/: seed-basic
fuzz/fuzz_targets/: build_query.rs  build_query_structured.rs
regression/: benchmarks.md
regression/cases/: adversarial_patterns.txt
src/: builder.rs  error.rs  filter.rs  hashing.rs  lib.rs  params.rs  tests.rs
