[package]
name = "ribbon-filter"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Static approximate-membership Ribbon filter"
repository = "https://github.com/WilliamRagstad/ribbon-filter"
keywords = [
    "ribbon",
    "filter",
    "membership",
    "inclusion",
    "containment",
    "probabilistic",
]
categories = ["algorithms", "data-structures"]
authors = ["William Rågstad"]

[[bench]]
name = "ribbon"
harness = false
path = "benches/ribbon.rs"

[dependencies]
bitvec = "1"
