[package]
name = "ribbon-filter"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Static approximate-membership Ribbon filter"
repository = "https://github.com/WilliamRagstad/ribbon-filter"
keywords = ["ribbon", "filter", "membership", "inclusion", "probabilistic"]
categories = ["algorithms", "data-structures"]
authors = ["William Rågstad"]

[[bench]]
name = "ribbon"
harness = false
path = "benches/ribbon.rs"

[dependencies]
bitvec = "1"

[dev-dependencies]
bloomfilter = "3"
bloomz = "0.1"
clubcard = { version = "0.3", features = ["builder"] }
fastbloom-rs = "0.5"
