[package]
name = "ribbon-filter"
version = "0.2.0"
edition = "2024"
autobenches = false
license = "MIT OR Apache-2.0"
description = "Static approximate-membership Ribbon filter"
repository = "https://github.com/WilliamRagstad/ribbon-filter"
keywords = ["ribbon", "filter", "membership", "inclusion", "probabilistic"]
categories = ["algorithms", "data-structures"]
authors = ["William Rågstad"]

[[bench]]
name = "main"
harness = false
path = "benches/main.rs"

[dependencies]
bitvec = "1"
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde", "bitvec/serde"]

[dev-dependencies]
criterion = "0.5"
bloomfilter = "3"
bloomz = "0.1"
clubcard = { version = "0.3", features = ["builder"] }
fastbloom-rs = "0.5"
serde_json = "1"
